# rusty-engine

./: Cargo.toml  README.md
resources/collada/: #cube.dae#  companion_cube.dae  cones.dae  cube.dae  default_env.dae  first_spaceship.dae  model2.dae  model4.dae
resources/scenes/: scene.sce
resources/shaders/: shader.frag  shader.vert  shader1.frag  shader1.vert  shaderpp.vert  shaderpp0.frag  shaderpp1.frag  shaderpp2.frag
src/: #drawing.rs#  camera_transformations.rs  drawing.rs  event_handling.rs  main.rs  model_loading.rs  shader_compilation.rs
src/drawing/: mesh.rs  shader_compilation.rs  texture.rs
src/drawing/mesh/: model_loading.rs
src/drawing/mesh/model_loading/: collada_parsing.rs  parsing.rs
src/event_handling/: camera_transformations.rs
src/event_handling/camera_transformations/: linalg.rs
