[package]
name = "rusty-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
image = "*"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3